# vitalgo

./: .branch-config.md  .gitignore  AWS_DEPLOYMENT.md  AWS_DEPLOYMENT_REQUIREMENTS.md  AWS_FREE_TIER_GUIDE.md  DOMAIN_SPECIFICATION.md  MANUAL_DE_MARCA.md  PROJECT_CONTEXT.md  README.md  SPRINT1_IMPLEMENTATION.md  deploy-free-tier.sh  deploy.sh  docker-compose.prod.yml  start-local-deploy.sh  stop-local-deploy.sh
aws/: cloudformation-template.yml  (+1 more)
backend/: .env.example  .env.production  Dockerfile  README.md  VitalGo_ER_Diagram.md  alembic.ini  create_admin_actions_table.sql  create_admin_user.sql  docker-compose.yml  init.sql  populate_medical_data.sql  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 5168f64bad08_initial_migration.py  add_eps_table.py  medical_management_tables.py
backend/docker/postgres/: init.sql
backend/slices/: main.py
backend/slices/core/: config.py
backend/slices/health_check/api/: routes.py
backend/slices/medical_management/: __init__.py
backend/slices/medical_management/api/routes/: __init__.py  admin.py  auth.py  patients.py  qr.py
backend/slices/medical_management/application/commands/: __init__.py
backend/slices/medical_management/application/handlers/: patient_handlers.py
backend/slices/medical_management/infrastructure/: __init__.py  config.py  database.py  handlers.py  models.py
backend/slices/shared/infrastructure/: database.py
backend/tests/: conftest.py
backend/tests/health_check/: test_health_routes.py
backend/tests/medical_management/: __init__.py  test_patient_flow.py
(+53 files in other folders)
